perf: optimize game
optimize neighbor cell click, bomb generation, and restart game performance

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
         <button id="professional" class="level__item">Professional</button>
         <button id="custom" class="level__item">Custom</button>
     </div>
-    <form class="settings" id="custom-settings">
+    <form id="custom-settings">
         <label for="widthInput">
             Width:
             <input type="number" name="widthInput" id="widthInput">
