feat: add timer

--- a/app/index.html
+++ b/app/index.html
@@ -105,9 +105,9 @@
                 </div>
                 <button class="restart-button" id="restart"></button>
                 <div id="timer" class="counter">
-                  <div class="counter__element"></div>
-                  <div class="counter__element"></div>
-                  <div class="counter__element"></div>
+                  <div class="counter__element type-num0"></div>
+                  <div class="counter__element type-num0"></div>
+                  <div class="counter__element type-num0"></div>
                 </div>
               </div>
             </div>
