feat: add theme toggler and dark theme

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="light">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,6 +10,7 @@
   <body>
     <div class="_container">
       <h1 class="title">Minesweeper</h1>
+      <div id="theme-toggler"></div>
       <div class="game">
         <div class="settings">
           <div class="settings__header">
