feat: add basic stats

--- a/app/index.html
+++ b/app/index.html
@@ -114,6 +114,15 @@
             </div>
             <div id="root"></div>
           </div>
+          <div class="modal">
+            <p class="modal__text" id="stats-gameStatus"></p>
+            <p>Time: <span id="stats-time"></span></p>
+            <!-- <p>3BV: <span id="stats-3bv"></span></p>
+            <p>3BV/s: <span id="stats-3bvs"></span></p> -->
+            <p>Clicks: <span id="stats-clicks"></span></p>
+            <!-- <p>Efficiency: <span id="stats-efficiency"></span></p> -->
+             <!-- Add in future -->
+          </div>
         </div>
       </div>
     </div>
