--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/null.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="app/css/null.css" />
+    <link rel="stylesheet" href="app/css/style.css" />
     <title>Minesweeper</title>
   </head>
   <body>
@@ -126,6 +126,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="app/js/index.js"></script>
   </body>
 </html>
