chore: add Open Graph meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Minesweeper">
+    <meta property="og:description" content="Challenge your mind with the classic game of Minesweeper! Uncover hidden mines, think over your moves, and clear the board without setting off any explosives. Can you reveal all the safe squares and become a Minesweeper master?">
+    <meta property="og:image" content="./app/img/mine.jpg" >
+    <link rel="icon" href="./app/img/icon.svg" type="image/x-icon">
     <link rel="stylesheet" href="app/css/null.css" />
     <link rel="stylesheet" href="app/css/style.css" />
     <title>Minesweeper</title>
